# shaderbase

./: .gitignore  Q6-Q10_AI测试报告.md  README.md  SHADERBASE_DESIGN.md  SHADERBASE_DEV_PLAN.md  SHADERBASE_GRAMMAR_DEV_PLAN.md  SHADERBASE_GRAMMAR_INVENTORY.md  mcp_测试用例.md  pyproject.toml  shaderbase_mcp_连接提示词.txt
docs/: SHADERBASE_DEV_PLAN.md
g66-shader-grammar/: .gitignore  README.md  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
g66-shader-grammar/bindings/python/tree_sitter_g66_shader/: __init__.py  __init__.pyi
g66-shader-grammar/docs/: known_issues.md
g66-shader-grammar/scripts/: bench_py.py  coverage.py  error_context.py  extract_nodes.py
g66-shader-grammar/src/: grammar.json  node-types.json
g66-shader-grammar/test/corpus/: 02_preproc.txt  03_annotation.txt  04_technique.txt  05_semantic.txt  06_expression.txt  07_cbuffer.txt  basic.txt
scripts/: bench_pipeline.py  check_edge_fixtures.py  check_fixtures.py  check_resolve_fixtures.py  cron_sync.py  gen_edge_fixture_candidates.py  gen_fixture_candidates.py  select_fixtures.py
shaderbase/: __init__.py
shaderbase/extract/: __init__.py  bench_extract.py  edges.py  nodes.py  resolve_calls.py
shaderbase/mcp_server/: __init__.py  __main__.py  server.py  tools.py
shaderbase/parser/: __init__.py  ast_utils.py  tree_sitter_loader.py
shaderbase/preprocessor/: __init__.py  art_macros.py  bench_pv_full.py  branch_signature.py  expr_parser.py  interpreter.py  macro_expander.py  macro_seeder.py  query_helper.py  view.py
shaderbase/store/: __init__.py  connection.py  incremental.py  (+2 more)
(+125 files in other folders)
